# asciinema-server

./: .dockerignore  .env.example  .env.production.sample  .gitignore  .gitmodules  .iex.exs  .rspec.example  .tool-versions  .travis.yml  CONTRIBUTING.md  Dockerfile  Dockerfile.dev  Gemfile  Guardfile  LICENSE  Procfile  README.md  README_DOCKER.md  Rakefile  app.rb  brunch-config.js  config.ru  docker-compose.yml  flake.nix  justfile  mix.exs  package.json  project.clj  sidekiq.ru  start_sidekiq.rb  thumb.js
.circleci/: config.yml
app/: models.rb
assets/: brunch-config.js  package-lock.json  package.json  tailwind.config.js  webpack.config.js
config/: app.yml  application.rb  cfg.rb  config.exs  confstruct.rb  custom.exs.sample  database.travis.yml  database.yml.example  deploy.rb  dev.exs  environment.rb  init.rb  prod.exs  releases.exs  routes.rb  runtime.exs  secrets.yml  sidekiq.yml  test.exs  unicorn.rb
db/: schema.rb  seeds.rb
dev/: .env.development  docker-compose.yml
docker/: asciinema.yml  start.sh
docs/: INSTALL.md
lib/: active_support_json_proxy.rb  asciinema.ex  asciinema_admin.ex  asciinema_web.ex  lazy_work_queue.rb  media.ex  oauth_helper.rb  omni_auth_helper.rb
native/: Cargo.toml
native/vt_nif/: Cargo.toml  README.md
native/vt_nif/src/: lib.rs
priv/: svg2png.sh  welcome.cast  welcome.snapshot.json
public/: .gitignore  500.html  robots.txt  uncompress.js
rel/: config.exs  env.sh.eex  vm.args.eex
script/: capture.sh  check-style.sh  cibuild.sh  convert-to-typescript.sh  fetch.rb  install_pngquant.sh  setup  thumbnail.sh
(+1770 files in other folders)
